--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dev": "nodemon api/index.ts -e js,ts,json"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.23.1",
         "connect-history-api-fallback": "^1.6.0",
         "connect-mongo": "^4.6.0",
         "cookie-parser": "~1.4.3",
@@ -22,7 +23,9 @@
         "mongoose": "^6.6.2",
         "morgan": "~1.10.0",
         "nanoid": "^3.3.4",
+        "ts-loader": "^9.4.1",
         "vue": "^2.7.13",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2",
         "vuex-persistedstate": "^4.1.0"
@@ -54,7 +57,9 @@
                 "files": [
                     "**/*.ts"
                 ],
-                "excludedFiles": ["client/**"],
+                "excludedFiles": [
+                    "client/**"
+                ],
                 "extends": [
                     "xo",
                     "xo-typescript/space",
